ADD interrupt and serial
Change-Id: Ia89cc2b3d9ad0837f4ad243d8c013e3367f2422d

--- a/board/csky/eragon_evb/Makefile
+++ b/board/csky/eragon_evb/Makefile
@@ -5,16 +5,18 @@
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
-obj-y	:= eragon_evb.o
-obj-y	+= lowlevel_init.o
-obj-y   += timer/timer.o
-obj-y   += uart/uart.o
-obj-y   += gpio/gpio.o
-obj-y   += spi/spi.o
-obj-y   += spiflash/spiflash.o
-obj-y   += emmc/emmc.o
-obj-y   += emmc/emmc_callback.o
-obj-y   += emmc/emmc_interface.o
-obj-y   += ddr/ddr.o
-obj-y   += om/om.o
-obj-y   += string/string.o
+obj-y := eragon_evb.o
+obj-y += uart/uart.o
+obj-y += gpio/gpio.o
+ifdef CONFIG_SPL_BUILD
+obj-y += mini_printf.o
+obj-y += ddr/ddr.o
+obj-y += spl.o
+obj-y += emmc/emmc.o
+obj-y += emmc/emmc_callback.o
+obj-y += emmc/emmc_interface.o
+obj-y += om/om.o
+endif
+#obj-y   += spi/spi.o
+#obj-y   += spiflash/spiflash.o
+#obj-y   += string/string.o
