--- a/configs/eragon_defconfig
+++ b/configs/eragon_defconfig
@@ -8,7 +8,11 @@ CONFIG_SYS_SOC="eragon"
 CONFIG_SYS_VENDOR="csky"
 CONFIG_SUPPORT_SPL=y
 CONFIG_SPL=y
+CONFIG_AUTOBOOT=n
 CONFIG_CMD_USB=n
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_UNIT_TEST=y
+CONFIG_UT_TIME=y
 # CONFIG_CMD_SETEXPR is not set
 CONFIG_CMD_DHCP=n
 CONFIG_CMD_PING=n
@@ -44,4 +48,4 @@ CONFIG_CMD_NFS=n
 CONFIG_CMD_MISC=n
 CONFIG_NET=n
 CONFIG_NET_TFTP_VARS=n
-CONFIG_CMDLINE=n
+CONFIG_CMDLINE=y
