--- a/arch/csky/cpu/ck807/Makefile
+++ b/arch/csky/cpu/ck807/Makefile
@@ -5,7 +5,13 @@
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
-extra-y	    += start.o
+extra-y     += start.o
 
-obj-y	    += cpu.o
+obj-y       += cpu.o
 obj-y       += entry.o
+obj-y       += exception.o
+obj-y       += interrupt.o
+#obj-y       += lowlevel_init.o
+#obj-y      += board.o
+obj-y       += timer.o
+obj-y       += cache.o
