--- a/configs/eragon_defconfig
+++ b/configs/eragon_defconfig
@@ -1,51 +1,41 @@
 CONFIG_CSKY=y
 CONFIG_TARGET_CK807=y
-CONFIG_BOOTDELAY=5
+CONFIG_SPL=y
 CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="CK807 # "
-CONFIG_SYS_BOARD="eragon_evb"
-CONFIG_SYS_SOC="eragon"
-CONFIG_SYS_VENDOR="csky"
-CONFIG_SUPPORT_SPL=y
-CONFIG_SPL=y
-CONFIG_AUTOBOOT=n
-CONFIG_CMD_USB=n
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_AUTOBOOT is not set
+# CONFIG_CMD_BDI is not set
+# CONFIG_CMD_CONSOLE is not set
+# CONFIG_CMD_BOOTD is not set
+# CONFIG_CMD_BOOTM is not set
+# CONFIG_CMD_ELF is not set
+# CONFIG_CMD_GO is not set
+# CONFIG_CMD_RUN is not set
+# CONFIG_CMD_IMI is not set
+# CONFIG_CMD_IMLS is not set
+# CONFIG_CMD_XIMG is not set
+# CONFIG_CMD_EXPORTENV is not set
+# CONFIG_CMD_IMPORTENV is not set
+# CONFIG_CMD_EDITENV is not set
+# CONFIG_CMD_SAVEENV is not set
+# CONFIG_CMD_ENV_EXISTS is not set
+# CONFIG_CMD_MEMORY is not set
+# CONFIG_CMD_LOADB is not set
+# CONFIG_CMD_LOADS is not set
+# CONFIG_CMD_FLASH is not set
+# CONFIG_CMD_FPGA is not set
+# CONFIG_CMD_ECHO is not set
+# CONFIG_CMD_ITEST is not set
+# CONFIG_CMD_SOURCE is not set
+# CONFIG_CMD_SETEXPR is not set
+CONFIG_CMD_TFTPPUT=y
+CONFIG_CMD_TFTPSRV=y
+# CONFIG_CMD_NFS is not set
+CONFIG_CMD_PING=y
+# CONFIG_CMD_MISC is not set
+CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_NETDEVICES=y
+CONFIG_ETH_DESIGNWARE=y
+# CONFIG_REGEX is not set
 CONFIG_UNIT_TEST=y
 CONFIG_UT_TIME=y
-# CONFIG_CMD_SETEXPR is not set
-CONFIG_CMD_DHCP=n
-CONFIG_CMD_PING=n
-CONFIG_CMD_CACHE=n
-CONFIG_CMD_EXT2=n
-CONFIG_CMD_FAT=n
-CONFIG_CMD_BDI=n
-CONFIG_CMD_CONSOLE=n
-CONFIG_CMD_BOOTD=n
-CONFIG_CMD_BOOTM=n
-CONFIG_CMD_ELF=n
-CONFIG_CMD_GO=n
-CONFIG_CMD_RUN=n
-CONFIG_CMD_IMI=n
-CONFIG_CMD_IMLS=n
-CONFIG_CMD_XIMG=n
-CONFIG_CMD_EXPORTENV=n
-CONFIG_CMD_IMPORTENV=n
-CONFIG_CMD_EDITENV=n
-CONFIG_CMD_SAVEENV=n
-CONFIG_CMD_ENV_EXISTS=n
-CONFIG_CMD_MEMORY=n
-CONFIG_CMD_CRC32=y
-CONFIG_CMD_LOADB=n
-CONFIG_CMD_LOADS=n
-CONFIG_CMD_FLASH=n
-CONFIG_CMD_FPGA=n
-CONFIG_CMD_ECHO=n
-CONFIG_CMD_ITEST=n
-CONFIG_CMD_SOURCE=n
-CONFIG_CMD_NET=n
-CONFIG_CMD_NFS=n
-CONFIG_CMD_MISC=n
-CONFIG_NET=n
-CONFIG_NET_TFTP_VARS=n
-CONFIG_CMDLINE=y
