--- a/arch/csky/cpu/ck807/Makefile
+++ b/arch/csky/cpu/ck807/Makefile
@@ -11,6 +11,7 @@ obj-y       += cpu.o
 obj-y       += entry.o
 obj-y       += exception.o
 obj-y       += interrupt.o
+obj-y       += crt0.o
 #obj-y       += lowlevel_init.o
 #obj-y      += board.o
 obj-y       += timer.o
