--- a/configs/eragon_defconfig
+++ b/configs/eragon_defconfig
@@ -17,7 +17,7 @@ CONFIG_SYS_PROMPT="CK807 # "
 # CONFIG_CMD_EXPORTENV is not set
 # CONFIG_CMD_IMPORTENV is not set
 # CONFIG_CMD_EDITENV is not set
-# CONFIG_CMD_SAVEENV is not set
+CONFIG_CMD_SAVEENV=y
 # CONFIG_CMD_ENV_EXISTS is not set
 # CONFIG_CMD_MEMORY is not set
 # CONFIG_CMD_LOADB is not set
