--- a/configs/eragon_defconfig
+++ b/configs/eragon_defconfig
@@ -9,25 +9,22 @@ CONFIG_SYS_PROMPT="CK807 # "
 # CONFIG_CMD_BOOTD is not set
 # CONFIG_CMD_BOOTM is not set
 # CONFIG_CMD_ELF is not set
-# CONFIG_CMD_GO is not set
-# CONFIG_CMD_RUN is not set
 # CONFIG_CMD_IMI is not set
 # CONFIG_CMD_IMLS is not set
 # CONFIG_CMD_XIMG is not set
 # CONFIG_CMD_EXPORTENV is not set
 # CONFIG_CMD_IMPORTENV is not set
 # CONFIG_CMD_EDITENV is not set
-CONFIG_CMD_SAVEENV=y
 # CONFIG_CMD_ENV_EXISTS is not set
-# CONFIG_CMD_MEMORY is not set
+# CONFIG_CMD_CRC32 is not set
 # CONFIG_CMD_LOADB is not set
 # CONFIG_CMD_LOADS is not set
 # CONFIG_CMD_FLASH is not set
+CONFIG_CMD_MMC=y
 # CONFIG_CMD_FPGA is not set
 # CONFIG_CMD_ECHO is not set
 # CONFIG_CMD_ITEST is not set
 # CONFIG_CMD_SOURCE is not set
-# CONFIG_CMD_SETEXPR is not set
 CONFIG_CMD_TFTPPUT=y
 CONFIG_CMD_TFTPSRV=y
 # CONFIG_CMD_NFS is not set
