--- a/arch/csky/Makefile
+++ b/arch/csky/Makefile
@@ -5,10 +5,9 @@
 # Machine directory name.  This list is sorted alphanumerically
 # by CONFIG_* macro name.
 
-#head-y := arch/csky/cpu/$(CPU)/start.o
-head-y := arch/csky/cpu/ck807/start.o
+head-y := arch/csky/cpu/$(CPU)/start.o
 
 libs-y += arch/csky/cpu/
-libs-y += arch/csky/cpu/ck807/
+libs-y += arch/csky/cpu/$(CPU)/
 libs-y += arch/csky/lib/
 
