--- a/arch/csky/cpu/Makefile
+++ b/arch/csky/cpu/Makefile
@@ -1,5 +1,7 @@
 #
-# SPDX-License-Identifier:  GPL-2.0+
+# Copyright (C) 2017 C-SKY Microsystems
+#
+# SPDX-License-Identifier:	GPL-2.0+
 #
 
 obj- += dummy.o
