move some drivers to common
Change-Id: I1715f830a17d7e25bf83ec2831df71beddf41246

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -24,7 +24,8 @@ config BLACKFIN
 	bool "Blackfin architecture"
 
 config CSKY
-    bool "CSKY architecture"
+	bool "CSKY architecture"
+	select CREATE_ARCH_SYMLINK
 
 config M68K
 	bool "M68000 architecture"
