Add the kdgd config
Change-Id: I9c2ca2492e43c3151b3a5b9e83f575defb9ec812

--- a/board/csky/eragon_evb/Kconfig
+++ b/board/csky/eragon_evb/Kconfig
@@ -1,4 +1,4 @@
-if TARGET_CK807
+if TARGET_ERAGON
 
 config SYS_BOARD
 	default "eragon_evb"
@@ -11,5 +11,22 @@ config SYS_SOC
 
 config SYS_CONFIG_NAME
 	default "eragon"
+
+endif
+
+if TARGET_KDGD
+
+config SYS_BOARD
+	default "eragon_evb"
+
+config SYS_VENDOR
+	default "csky"
+
+config SYS_SOC
+	default "kdgd"
+
+config SYS_CONFIG_NAME
+	default "kdgd"
+
 
 endif
