--- a/configs/kdgd_defconfig
+++ b/configs/kdgd_defconfig
@@ -1,8 +1,8 @@
 CONFIG_CSKY=y
-CONFIG_TARGET_ERAGON=y
+CONFIG_TARGET_KDGD=y
 CONFIG_SPL=y
 CONFIG_HUSH_PARSER=y
-CONFIG_SYS_PROMPT="CK807 # "
+CONFIG_SYS_PROMPT="CK810 # "
 # CONFIG_CMD_BDI is not set
 # CONFIG_CMD_CONSOLE is not set
 # CONFIG_CMD_ELF is not set
