--- a/arch/csky/Kconfig
+++ b/arch/csky/Kconfig
@@ -4,23 +4,28 @@ menu "CSKY architecture"
 config SYS_ARCH
 	default "csky"
 
-config CPU_CK807
+config CPU_CK807_810
         bool
 
 config SYS_CPU
-        default "ck807" if CPU_CK807
+        default "ck807_810" if CPU_CK807_810
 
 config SYS_CSKY_ARCH
 	int
-	default 1 if CPU_CK807
+	default 1 if CPU_CK807_810
 
 choice
 	prompt "Target select"
 	optional
 
-config TARGET_CK807
-	bool "Support ck807"
-	select CPU_CK807
+config TARGET_ERAGON
+	bool "Support eragon"
+	select CPU_CK807_810
+	select SUPPORT_SPL
+
+config TARGET_KDGD
+	bool "Support kdgd"
+	select CPU_CK807_810
 	select SUPPORT_SPL
 
 endchoice
