Add mailbox driver and selftest case; Add cmd auto complete feature
Change-Id: I30da645c356ad7e3821c30c045fe4256ed401f22

--- a/board/csky/eragon_evb/Makefile
+++ b/board/csky/eragon_evb/Makefile
@@ -1,13 +1,16 @@
 #
-# Copyright (C) 2017 C-SKY Microsystems
+# Copyright (C) 2017 C-SKY MicroSystems Co.,Ltd.
 #
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
 obj-y := eragon_evb.o
 obj-y += gpio/gpio.o
+
 ifdef CONFIG_SPL_BUILD
 obj-y += ddr/ddr.o
 obj-y += spl.o
 obj-y += om/om.o
+else
+obj-y += mailbox/mailbox-csky.o
 endif
