--- a/configs/eragon_defconfig
+++ b/configs/eragon_defconfig
@@ -27,9 +27,11 @@ CONFIG_CMD_TFTPSRV=y
 # CONFIG_CMD_NFS is not set
 CONFIG_CMD_PING=y
 # CONFIG_CMD_MISC is not set
+CONFIG_CMD_MAILBOX_CSKY=y
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_NETDEVICES=y
 CONFIG_ETH_DESIGNWARE=y
 # CONFIG_REGEX is not set
 CONFIG_UNIT_TEST=y
 CONFIG_UT_TIME=y
+
