Add era_loongson and eragon_ls
Change-Id: I959de6a5eae61f6a4ac4385665d54a0be6617d32

--- a/arch/csky/Kconfig
+++ b/arch/csky/Kconfig
@@ -28,6 +28,11 @@ config TARGET_KDGD
 	select CPU_CK807_810
 	select SUPPORT_SPL
 
+config TARGET_ERAGON_LS
+	bool "Support eragon_ls"
+	select CPU_CK807_810
+	select SUPPORT_SPL
+
 endchoice
 
 source "board/csky/eragon_evb/Kconfig"
