--- a/configs/era_loongson_defconfig
+++ b/configs/era_loongson_defconfig
@@ -7,6 +7,7 @@ CONFIG_CPU_MIPS32_R1=y
 CONFIG_SYS_PROMPT="loongson # "
 # CONFIG_CMD_BOOTD is not set
 # CONFIG_CMD_BOOTM is not set
+CONFIG_CMD_MAILBOX_CSKY=y
 # CONFIG_REGEX is not set
 CONFIG_UNIT_TEST=y
 CONFIG_UT_TIME=y
