Remove mailbox from eragon original; Add arch=loongson in Makefile
Change-Id: I7401b65fba750abb7c081a20c313fd395526e72b

--- a/board/csky/eragon_evb/Makefile
+++ b/board/csky/eragon_evb/Makefile
@@ -8,15 +8,23 @@ obj-y := eragon_evb.o
 obj-y += gpio/gpio.o
 
 ifdef CONFIG_SPL_BUILD
+
 ifdef CONFIG_ERAGON_ORIGINAL
 obj-y += ddr/ddr_original.o
 obj-y += eragon_original/spl.o
-endif
+endif #CONFIG_ERAGON_ORIGINAL
+
 ifdef CONFIG_ERAGON_LS
 obj-y += eragon_ls/spl.o
 obj-y += ddr/ddr_ls.o
-endif
+endif #CONFIG_ERAGON_LS
+
 obj-y += om/om.o
-else
+
+else #CONFIG_SPL_BUILD
+
+ifdef CONFIG_ERAGON_LS
 obj-y += mailbox/mailbox-csky.o
 endif
+
+endif #CONFIG_SPL_BUILD
