--- a/configs/eragon_asic_defconfig
+++ b/configs/eragon_asic_defconfig
@@ -2,8 +2,8 @@ CONFIG_CSKY=y
 CONFIG_TARGET_ERAGON=y
 CONFIG_SPL=y
 CONFIG_HUSH_PARSER=y
+CONFIG_IS_ASIC=y
 CONFIG_SYS_PROMPT="CK807 # "
-# CONFIG_IS_ASIC is not set
 # CONFIG_CMD_BDI is not set
 # CONFIG_CMD_CONSOLE is not set
 # CONFIG_CMD_ELF is not set
