--- a/configs/kdgd_defconfig
+++ b/configs/kdgd_defconfig
@@ -3,6 +3,7 @@ CONFIG_TARGET_KDGD=y
 CONFIG_SPL=y
 CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="CK810 # "
+# CONFIG_IS_ASIC is not set
 # CONFIG_CMD_BDI is not set
 # CONFIG_CMD_CONSOLE is not set
 # CONFIG_CMD_ELF is not set
