Update ddr init and pll for eragon asic
Change-Id: I0364e99a0545df4492300fd8a7164424856327b1

--- a/board/csky/eragon_evb/Makefile
+++ b/board/csky/eragon_evb/Makefile
@@ -10,7 +10,11 @@ obj-y += gpio/gpio.o
 ifdef CONFIG_SPL_BUILD
 
 ifdef CONFIG_ERAGON_ORIGINAL
+ifdef CONFIG_IS_ASIC
+obj-y += ddr/ddr_asic.o
+else
 obj-y += ddr/ddr_original.o
+endif #CONFIG_IS_ASIC
 obj-y += eragon_original/spl.o
 endif #CONFIG_ERAGON_ORIGINAL
 
