Rename eragon_ls to be eragon2
Change-Id: I460ba1aaec135dff4176e13719db30ba292f0d9a

--- a/arch/csky/Kconfig
+++ b/arch/csky/Kconfig
@@ -42,8 +42,8 @@ config TARGET_KDGD
 	select CPU_CK807_810
 	select SUPPORT_SPL
 
-config TARGET_ERAGON_LS
-	bool "Support eragon_ls"
+config TARGET_ERAGON2
+	bool "Support eragon2"
 	select CPU_CK807_810
 	select SUPPORT_SPL
 
