--- a/arch/csky/Makefile
+++ b/arch/csky/Makefile
@@ -4,6 +4,13 @@
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
+cpuflags-$(CONFIG_CK860)	:= -mcpu=ck860
+cpuflags-$(CONFIG_CK807)	:= -mcpu=ck807
+cpuflags-$(CONFIG_CK810)	:= -mcpu=ck810
+
+PLATFORM_CPPFLAGS += $(cpuflags-y)
+
+
 head-y := arch/csky/cpu/$(CPU)/start.o
 libs-y += arch/csky/cpu/
 libs-y += arch/csky/cpu/$(CPU)/
