Add loongson start mode in spiflash
Change-Id: I1afbeab93b2690dd10935e57aa098841de154443

--- a/drivers/mmc/Makefile
+++ b/drivers/mmc/Makefile
@@ -5,6 +5,8 @@
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
+KBUILD_CFLAGS += -O0
+
 ifdef CONFIG_DM_MMC
 obj-$(CONFIG_GENERIC_MMC) += mmc-uclass.o
 endif
