Add eragon2 slave cpu defconfig
Change-Id: Ie8ebb8323b1ae8ffbf9a20c3215547caef3085e0

--- a/arch/csky/Kconfig
+++ b/arch/csky/Kconfig
@@ -29,6 +29,15 @@ config IS_ASIC
 endchoice
 
 choice
+	prompt "slave cpu select"
+	optional
+
+config BOOT_SLAVE_CPU
+	bool "boot the slave cpu"
+
+endchoice
+
+choice
 	prompt "Target select"
 	optional
 
