--- a/board/loongson/era_loongson/Makefile
+++ b/board/loongson/era_loongson/Makefile
@@ -5,6 +5,6 @@
 obj-y := era_loongson.o
 
 ifndef CONFIG_SPL_BUILD
-obj-y += mailbox-csky.o
+obj-$(CONFIG_CMD_MAILBOX_SHELL) += mailbox-shell.o
 endif
 
